[gd_scene load_steps=4 format=3 uid="uid://bxkv2lyqmm417"]

[ext_resource type="Texture2D" uid="uid://dl8u2hk4yiw3a" path="res://assets/img/vesper_face.png" id="1_8rs11"]
[ext_resource type="Script" path="res://scenes/second_prostitution.gd" id="1_57x75"]
[ext_resource type="PackedScene" uid="uid://728fnim4yyl8" path="res://scenes/dialogue_label.tscn" id="2_djwqt"]

[node name="SecondProstitution" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_57x75")

[node name="SceneBg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DialogBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 223.0
offset_top = -338.0
offset_right = -219.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="CharPortrait" type="TextureRect" parent="DialogBox"]
visible = false
layout_mode = 0
offset_left = -178.0
offset_top = -79.0
offset_right = 166.0
offset_bottom = 303.0
texture = ExtResource("1_8rs11")
expand_mode = 1

[node name="DialogueLabel" parent="DialogBox" instance=ExtResource("2_djwqt")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 148.0
offset_top = 21.0
offset_right = -55.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
text = "Type here"
messages = Array[String](["As much as you hate to admit you’re getting used to this place.", "You begin to see why so many people lose themselves here. Running away from responsibility, from society, the freedom of it all.", "The only difference is that blood is your drug, and you are always in withdrawal.", "Maybe you should try to enjoy it a little more, you’re already here, and your unsuspecting victims are also just satisfying their basic needs.", "You spot a potential client across the street, he can’t keep his eyes away from you.", "This one looks much younger, you’d say he’s in his early 20’s. He’s clean shaven, and wearing perfume.", "He almost feels out of place, except for the faint smell of alcohol and a huge scar across his face.", "You approach him, he is slightly shorter than you because of your high heels.", "Vesper: Hello… you look a little lost.", "Young Man: Ah… hello. I’m Josh.", "Vesper: Hi, Josh. A pleasure to meet you.", "Vesper: May I ask what you’re doing here all by yourself?", "He looks away…", "Young Man: I’m tired of my friends mocking me, ‘cause I’ve never been with a woman before.", "Vesper: Well, we can change that, how much do you have?", "Josh: I… don’t have much. ", "He fumbles through his wallet nervously.", "Vesper: You put your hand on top of his. ", "He’s shaking.", "You look straight into his eyes.", "Vesper: Josh, do you like me?", "Josh: … Yes.", "Vesper: I’ll give you a discount then.", "Josh hands you a few dollars.", "You take him to an alley nearby where nobody’s looking.", "You almost feel pity towards him and what is about to happen, but the hunger speaks louder, and he is a perfect victim.", "You decide to at least make his night memorable.", "You grab his waist and pull him towards you. He’s timid, but still a grown man, you notice a huge bulk rising in his pants.", "He finally takes action and grabs your butt firmly with both hands.", "Vesper: I can feel you becoming hard between my legs.", "Josh: Ah, you’re so beautiful, and you smell so good.", "Vesper: I want to kiss you all over, Josh.  ", "Vesper: Beginning with this scar right here.", "Josh: Is it okay if I?", "Without answering you slowly start lifting his hands up.", "You notice he’s almost about to explode.", "You’re taking joy in corrupting this young man.", "You start kissing his neck, feeling the blood pumping through his veins makes you excited.", "Vesper: Do you want to see my tits, Josh?", "He hesitates for a moment, too afraid to keep going.", "You whisper softly in his ear as his unsteady hands touch the lower part of your breasts.", "Vesper: Go on, Josh… touch my tits.", "He slides your bra to the side revealing your perky nipples, ", "Vesper: See how hard they are? Pinch them.", "But the thrill is too much for him to take.", "He cums inside his pants.", "Satisfied you sink your teeth deep into his neck.", "Not understanding what’s happening he falls slowly into your arms, with his hands still holding your breasts.", "You grab him as he falls, and softly place him against the wall.", "As you shuffle through his wallet, you leave him with just enough money so he can get home.", "You take one last look at him before you go, by his expression it looks like he’s having a pleasant dream.    ", "-- END OF SECOND PROSTITUTION ---", "-- START OF PROSTITUTION D --", "The red light district is starting to feel less threatening everytime you visit.", "You sit down reflecting on your life in this place.", "Vesper: These last few days I’ve been fondled and rubbed by so many different men that I’ve lost count. ", "Vesper: Something they all had in common was a genuine interest in my tits.", "You roll your blouse up to get a better look at your cleavage.", "Vesper: I never really paid too much attention until recently, but I have really perky tits. ", "Vesper: They seem to make my clients hard all the time.", "Vesper: Josh came in his pants just by pinching my nipples.", "Vesper: Maybe I should be more adventurous? ", "Vesper: I feel so hot, there’s no one around… I could let them out to breathe for a while. ", "Vesper: What if someone sees them again? ", "Vesper: Nobody will come, It’s just for a while, like a dare, 1 minute and I’ll cover them again.", "You look both ways, nobody’s nearby. You take a deep breath and uncover your tits.", "Vesper: It feels nice to let them out. ", "Vesper: Look at my nipples, they are so hard already.", "Vesper: I can’t believe I’m topless in public. Not too long ago I was interviewing the girls here.", "Vesper: Now I look just like a real prostitute with my tits hanging out like this.", "- 5 minutes pass -", "Vesper: Why haven’t I covered them? I shouldn’t be doing this…", "- 20 minutes pass -", "Vesper: I’m not nervous anymore, I even forgot my tits are out.", "- 30 minutes pass - ", "Vesper: Why keep lying to myself? My pussy’s getting wet just thinking about someone catching me like this.", "Soon your wish comes true and a man approaches you, hypnotized looking directly at your boobs.", "Man: What a beautiful pair of tits.", "Vesper: Thanks. They are all yours if you have the money. ", "Vesper: I'll let you pinch them as much as you want, deal?", "Before you know it you’re both in a dark alley; his hands on your tits, your fangs on his neck.", "You drink until you're satisfied.", "Vesper: It worked like a charm. And he made me wet.", "With his wallet in your hand, you leave him lying on the floor.", "-- END OF PROSTITUTON D --"])

[node name="NamePanel" type="Panel" parent="DialogBox"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 129.0
offset_top = -197.0
offset_right = -1132.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="DialogBox/NamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Vesper"
horizontal_alignment = 1
vertical_alignment = 1
